images for hotel appear

--- a/src/components/common/config.json
+++ b/src/components/common/config.json
@@ -1,11 +1,14 @@
 {
-    "apiEndpoint" : "https://hotels-com-free.p.rapidapi.com/nice/image-catalog/v2/hotels/106346",
+    "apiEndpoint" : "https://hotels-com-free.p.rapidapi.com",
     "headers": { "headers" : {
         "x-rapidapi-key":
           "59af063256mshff686147ba08b9bp11b97ejsn285e58e819e4",
         "x-rapidapi-host": "hotels-com-free.p.rapidapi.com",
         "useQueryString": true
-      }}
+      }},
+    "query": {"query": {
+	      "query": "San Francisco",
+	      "locale": "en_US"
+}}
 }
-
 
