--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
